[package]
name = "twitter-clone-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "3.3.2"
serde = "1.0.127"
serde_json = "1.0.66"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
env_logger = "0.9.0"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
